<resources>
    <string name="app_name">Loiti</string>
    <string name="app_name_capital">LOITI</string>
    <string name="reg_name_hint">Írja ide a kedves nevét</string>
    <string name="reg_pass_tip">Válasszon jelszót a figurák kombinációjából</string>
    <string name="reg_fb_login">FACEBOOK LOGIN</string>
    <string name="reg_or">VAGY</string>
    <string name="main_table_text">Asztalt foglalnék</string>
    <string name="main_inside_gift_text">MEGNÉZEM AZ\nAJÁNDÉKOM</string>
    <string name="main_inside_has_no_table_text">MÉG NINCS\nASZTALOM</string>
    <string name="menu_gift_notification">AJÁNDÉK\nÉRTESITÉS</string>
    <string name="menu_main">KEZDŐLAP</string>
    <string name="menu_registration">REGISZTRÁCIÓ</string>
    <string name="menu_login">BELÉPÉS</string>
    <string name="menu_profile">PROFILOM</string>
    <string name="menu_gifts">AJÁNDÉKAIM</string>
    <string name="menu_daily_menu">NAPI MENÜ</string>
    <string name="menu_weekly_menu">HETI MENÜ</string>
    <string name="menu_alacarte">ALACARTE</string>
    <string name="menu_chefs_secrets">SÉF TITKAI</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contact">KAPCSOLAT</string>
    <string name="menu_terms_conditions">FELHASZNÁLÁSI FELTÉTELEK</string>
    <string name="menu_payment">FIZETÉS</string>
    <string name="menu_qr_reader">QR OLVASÓ</string>
    <string name="menu_visitors_book">VENDÉGKÖNYV</string>
    <string name="menu_language_identifier">EN</string>
    <string name="dialog_dont_show">NE JELENJEN MEG TÖBBET\nEZ A FIGYELMEZTETÉS</string>
    <string name="dialog_ok">ÉRTETTEM</string>
    <string name="dialog_ok_send">ELKÜLD</string>
    <string name="dialog_qr_read">A QR KÓD\nBEOLVASÁSÁVAL\nTUDSZ RENDELNI\nVAGY PINCÉRT HÍVNI</string>
    <string name="dialog_has_no_table">KÉRÉSÉT\nJELEZTÜK\nFELSZOLGÁLÓNK\nFELÉ, AKI HAMAROSAN\nRENDELKEZÉSÉRE ÁLL</string>
    <string name="dialog_come_closer_choose_gift">GYERE BE\nÉTTERMÜNKBE,\nHOGY ASZTALT\nFOGLALHASS</string>
    <string name="dialog_come_closer_reserve_table">GYERE BE\nÉTTERMÜNKBE,\nÉS VÁLASZD KI\nAZ AJÁNDÉKOD</string>
    <string name="dialog_a_la_carte_not_available">AZ A LA CARTE ÉTLAP\nNEM ELÉRHETŐ.\nNÉZZ VISSZA KÉSŐBB!</string>
    <string name="dialog_faq_not_available">A GYAKORI KÉRDÉSEK MENÜPONT\nNEM ELÉRHETŐ.\nNÉZZ VISSZA KÉSŐBB!</string>
    <string name="main_at_table_menu">MENÜ</string>
    <string name="main_at_table_todays_menu">MAI MENÜ</string>
    <string name="main_at_table_a_la_carte">A LA CARTE</string>
    <string name="main_at_table_a_la_carte_recommendation">AJÁNLAT ÉTLAPUNKRÓL</string>
    <string name="main_at_table_gift">MEGNÉZEM AZ\nAJÁNDÉKOM</string>
    <string name="main_at_table_waiter_caller">PINCÉRHÍVÓ</string>
    <string name="main_at_table_table_number">ASZTALSZÁM: $1$d</string>
    <string name="far_header_login">BELÉPEK</string>
    <string name="far_header_or">vagy</string>
    <string name="far_header_register">REGISZTRÁLOK</string>
    <string name="far_daily_header_today">MAI MENÜ</string>
    <string name="far_daily_header_tomorrow">HOLNAPI MENÜ</string>
    <string name="registration_header">REGISZTRÁCIÓ</string>
    <string name="registration_take_photo_text">FOTÓ KÉSZÍTÉSE&lt;sup&gt;*&lt;/sup&gt;</string>
    <string name="registration_name_hint">Írja ide a kedves nevét</string>
    <string name="registration_email_hint">Valamint az email címét</string>
    <string name="registration_phone_hint">Telefonszám</string>
    <string name="registration_star_text">&lt;sup&gt;*&lt;/sup&gt;a csillaggal jelölt mezők kitöltése kötelező!</string>
    <string name="registration_slotmachine_text">Válasszon jelszót a számok kombinációjából</string>
    <string name="registration_register_text">REGISZTRÁLOK</string>
    <string name="registration_facebook_login_text">FACEBOOK LOGIN</string>
    <string name="registration_picture_dialog_header">Válassz fotót</string>
    <string name="login_slotmachine_text">Válasszon jelszót a számok kombinációjából</string>
    <string name="login_login_text">BELÉPEK</string>
    <string name="login_email_hint">Írja be email címét</string>
    <string name="main_register">REGISZTRÁCIÓ</string>
    <string name="main_login">BELÉPÉS</string>
    <string name="main_my_profile">PROFILOM</string>
    <string name="main_my_gifts">AJÁNDÉKAIM</string>
    <string name="main_daily_menu">NAPI MENÜ</string>
    <string name="main_weekly_menu">HETI MENÜ</string>
    <string name="main_a_la_carte">ALACARTE</string>
    <string name="main_chefs_secrets">SÉF TITKAI</string>
    <string name="main_payment">FIZETÉS</string>
    <string name="main_qr_reader">QR OLVASÓ</string>
    <string name="slot_zero">0</string>
    <string name="slot_one">1</string>
    <string name="slot_two">2</string>
    <string name="slot_three">3</string>
    <string name="slot_four">4</string>
    <string name="slot_five">5</string>
    <string name="slot_six">6</string>
    <string name="slot_seven">7</string>
    <string name="slot_eight">8</string>
    <string name="slot_nine">9</string>
    <string name="profile_new_photo">ÚJ KÉP</string>
    <string name="profile_name_hint">Név</string>
    <string name="profile_email_hint">Email cím</string>
    <string name="profile_phone_hint">Telefon szám</string>
    <string name="profile_change_password">JELSZÓ CSERE</string>
    <string name="profile_save">MENTÉS</string>
    <string-array name="weekly_menu_day_names">
        <item>HÉTFŐ</item>
        <item>KEDD</item>
        <item>SZERDA</item>
        <item>CSÜTÖRTÖK</item>
        <item>PÉNTEK</item>
        <item>SZOMBAT</item>
        <item>VASÁRNAP</item>
    </string-array>
    <string name="weekly_header">NAPI MENÜ</string>
    <string name="featured_menu_header">HETI MENÜ</string>
    <string name="qr_reader_search_for_qr_on_desk">KERESD A QR KÓDOT\nAZ ASZTALOKON</string>
    <string name="payment_header">FIZETÉS</string>
    <string name="payment_no_bill">NEM KÉREK SZÁMLÁT</string>
    <string name="payment_bill">KÉREK SZÁMLÁT</string>
    <string name="payment_cash">KÉSZPÉNZZEL FIZETNÉK</string>
    <string name="payment_card">BANKKÁRTYÁVAL FIZETNÉK</string>
    <string name="bill_header">SZÁMLA ADATAI</string>
    <string name="bill_send">ELKÜLD</string>
    <string name="bill_name_hint">Cég vagy E.v. név</string>
    <string name="bill_tax_number_hint">Adószám</string>
    <string name="bill_postal_code_hint">Irányítószám</string>
    <string name="bill_city_hint">Település</string>
    <string name="bill_address_hint">Cím</string>
    <string name="visitors_book_header">VENDÉGKÖNYV</string>
    <string name="visitors_book_spinner_prompt">Válasszon témakört</string>
    <string name="visitors_book_text_hint">Szöveges értékelés</string>
    <string name="visitors_book_send">ELKÜLD</string>
    <string-array name="visitors_book_spinner_items">
        <item>Applikáció</item>
        <item>Étterem</item>
        <item>Kiszolgálás</item>
        <item>Étel</item>
    </string-array>
    <string name="gifts_visit_count_head">MÁR</string>
    <string name="gifts_visit_count_tail">ALKALOMMAL JÁRTÁL ÉTTERMÜNKBEN</string>
    <string name="faq_header">FAQ</string>
    <string name="chefs_secrets_header">SÉF TITKAI</string>
    <string name="terms_conditions_header">FELHASZNÁLÁSI FELTÉTELEK</string>
    <string-array name="terms_conditions_headers">
        <item>1. General information</item>
        <item>2. Data protection clause</item>
        <item>2.1 Purpose of data collection</item>
        <item>2.2 Information on processed data</item>
        <item>2.3 Your rights in connection with data protection</item>
        <item>2.4 Data Protection</item>
    </string-array>
</resources>